--- a/gmail-to-sfdc/Dependencies.toml
+++ b/gmail-to-sfdc/Dependencies.toml
@@ -61,7 +61,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "http"
-version = "2.9.1"
+version = "2.9.2"
 dependencies = [
 	{org = "ballerina", name = "auth"},
 	{org = "ballerina", name = "cache"},
@@ -351,6 +351,20 @@ modules = [
 
 [[package]]
 org = "ballerinax"
+name = "openai.chat"
+version = "1.1.0"
+dependencies = [
+	{org = "ballerina", name = "constraint"},
+	{org = "ballerina", name = "http"},
+	{org = "ballerina", name = "url"},
+	{org = "ballerinai", name = "observe"}
+]
+modules = [
+	{org = "ballerinax", packageName = "openai.chat", moduleName = "openai.chat"}
+]
+
+[[package]]
+org = "ballerinax"
 name = "salesforce"
 version = "7.5.0"
 dependencies = [
@@ -387,6 +401,7 @@ dependencies = [
 	{org = "ballerina", name = "mime"},
 	{org = "ballerinai", name = "observe"},
 	{org = "ballerinax", name = "googleapis.gmail"},
+	{org = "ballerinax", name = "openai.chat"},
 	{org = "ballerinax", name = "salesforce"}
 ]
 modules = [
